syntax = "proto3";

package relationships.v1;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "relationships/v1/subject_ispropagatedto_object.proto";
import "relationships/v1/common.proto";


option go_package = "github.com/tonytheleg/resource-api/api/relationships;relationships";
//option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1/relationships";
//option java_multiple_files = true;
//option java_package = "org.project_kessel.api.inventory.v1beta1.relationships";

message CreateObjectSubjectRelationshipRequest {
  ObjectSubjectRelationship object_subject_relationship = 1
  [json_name = "object_subject_relationship", (buf.validate.field).required = true];
}

message CreateObjectSubjectRelationshipResponse {}

message UpdateObjectSubjectRelationshipRequest {
  ObjectSubjectRelationship object_subject_relationship = 1
  [json_name = "object_subject_relationship", (buf.validate.field).required = true];
}

message UpdateObjectSubjectRelationshipResponse {}

message DeleteObjectSubjectRelationshipRequest {
  relationships.v1.ReporterData reporter_data = 1
  [json_name = "reporter_data", (buf.validate.field).required = true];
}

message DeleteObjectSubjectRelationshipResponse {}

service ObjectSubjectRelationshipService {
  rpc CreateObjectSubjectRelationship(CreateObjectSubjectRelationshipRequest)
      returns (CreateObjectSubjectRelationshipResponse) {
    option (google.api.http) = {
      post: "/api/inventory/v1beta1/resource-relationships/object-to-subject"
      body: "*"
    };
  }

  rpc UpdateObjectSubjectRelationship(UpdateObjectSubjectRelationshipRequest)
      returns (UpdateObjectSubjectRelationshipResponse) {
    option (google.api.http) = {
      put: "/api/inventory/v1beta1/resource-relationships/object-to-subject"
      body: "*"
    };
  }

  rpc DeleteObjectSubjectRelationship(DeleteObjectSubjectRelationshipRequest)
      returns (DeleteObjectSubjectRelationshipResponse) {
    option (google.api.http) = {
      delete: "/api/inventory/v1beta1/resource-relationships/object-to-subject"
      body: "*"
    };
  }
}
